--- a/css/style.css
+++ b/css/style.css
@@ -141,13 +141,13 @@ p {
 .section-title:before {
     position: absolute;
     top: 51px;
-    left: 0px;
-    right: 0px;
+    left: 0;
+    right: 0;
     content: "";
     background: #ff9800;
     height: 39px;
     width: 2px;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 .title-header {
@@ -162,11 +162,11 @@ p {
 *******************/
 
 .navbar-custom {
-    padding: 20px 0px;
+    padding: 20px 0;
     width: 100%;
-    border-radius: 0px;
+    border-radius: 0;
     z-index: 999;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     transition: all 0.5s ease-in-out;
 }
 
@@ -174,7 +174,6 @@ p {
     line-height: 26px;
     color: #fff;
     font-size: 15px;
-    transition: all 0.4s;
     text-transform: capitalize;
     transition: all 0.5s;
     background-color: transparent !important;
@@ -184,14 +183,14 @@ p {
 }
 
 .navbar-custom .navbar-nav .nav-link {
-    padding-right: 0px;
-    padding-left: 0px;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 .navbar-toggler {
     font-size: 24px;
     margin-top: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     color: #ffffff;
 }
 
@@ -205,7 +204,7 @@ p {
 .navbar-toggle {
     font-size: 24px;
     margin-top: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     color: #ffffff;
 }
 
@@ -233,7 +232,7 @@ p {
 }
 
 .menu-toggle {
-    padding: 4.5px 10px !important;
+    padding: 5px 10px !important;
 }
 
 .menu-toggle span {
@@ -244,8 +243,8 @@ p {
 /*---NAVBAR STICKY--*/
 
 .nav-sticky.navbar-custom {
-    margin-top: 0px;
-    padding: 10px 0px;
+    margin-top: 0;
+    padding: 10px 0;
     background-color: #FFF;
     box-shadow: 0 10px 33px rgba(0, 0, 0, .1);
     color: #fff !important;
