--- a/css/style.css
+++ b/css/style.css
@@ -729,13 +729,13 @@ p {
     .navbar-custom {
         margin-top: 0;
         padding: 10px 0 !important;
-        background-color: #fff !important;
+        background-color: transparent !important;
         box-shadow: 0 10px 33px rgba(0, 0, 0, .1);
-        color: #000 !important;
+        color: #FFF !important;
     }
     .navbar-custom .navbar-nav li a {
         transition: all 0.4s;
-        color: #000 !important;
+        color: #FFF !important;
         margin: 0;
     }
     .navbar-custom>.container {
@@ -743,6 +743,7 @@ p {
     }
     .navbar-custom .navbar-nav li.active a {
         border-color: transparent;
+        color: #ff9800;
     }
     .navbar-nav {
         margin-top: 0;
@@ -751,10 +752,10 @@ p {
         font-size: 24px;
         margin-top: 0;
         margin-bottom: 0;
-        color: #000;
+        color: #FFF;
     }
     .navbar-custom .logo {
-        color: #000 !important;
+        color: #FFF !important;
     }
     .bg-home , .home-height-half, .video-bg-full {
         height: auto;
