--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,8 @@ p {
     position: relative;
     overflow: hidden;
     display: block;
+    height: 250px;
+    width: 350px;
 }
 
 .item-box a {
