--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,3 @@
-
-/* Theme Name: Dirio - Personal Responsive WebPage Tamplate
-   Author: Themesdesign
-   Version: 1.0.0
-   Created: September 2019
-   File Description:Main Css file of the template
-*/
-
-/*
-1.helper
-2.navbar
-3.home
-4.about
-5.services
-6.work
-7.counter
-8.testimonial
-9.blog
-10.contact
-11.footer
-12.responsive 
-*/
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
@@ -772,4 +749,19 @@ p {
 }
 .pointer{
     cursor: pointer;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ff9800;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: #242a35;
 }
