--- a/css/style.css
+++ b/css/style.css
@@ -765,3 +765,10 @@ p {
 ::-webkit-scrollbar-thumb:hover{
     background: #242a35;
 }
+.disable-select{
+    user-select: none;
+    -moz-user-select:none;
+    -webkit-user-select:none;
+    -webkit-touch-callout:none;
+    -ms-user-select:none;
+}
