--- a/css/style.css
+++ b/css/style.css
@@ -778,10 +778,11 @@ p {
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
+    padding-bottom: 100px;
 }
 .container-ach .box{
     position: relative;
-    height: 400px;
+    height: 420px;
     margin: 40px;
     background: #242a35;
     border-radius: 20px;
@@ -791,7 +792,7 @@ p {
 .container-ach .box ::before{
     content: "Achivements";
     position: absolute;
-    bottom: 20px;
+    top: 20px;
     left: 20px;
     font-size: 6em;
     font-weight: 900;
@@ -826,6 +827,7 @@ p {
     text-align: center;
     color: white;
     width: 100%;
+    font-size: 20px;
     transform-style: preserve-3d;
     transform: translate3d(0,0,75px);
     transition: 0.5s;
@@ -844,8 +846,9 @@ p {
     transition: 0.5s;
     z-index: 11;
     transform-style: preserve-3d;
-    transform: translate3d(-50%,-50%,0px) rotate(-15deg);
+    transform: translate3d(-50%,-50%,0px) rotate(0);
 }
 .container-ach .box:hover .ach-img{
-    transform: translate3d(-50%,-50%,100px) rotate(-15deg);
+    top: 65%;
+    transform: translate3d(-50%,-50%,100px) rotate(0deg);
 }
