--- a/css/style.css
+++ b/css/style.css
@@ -848,8 +848,9 @@ p {
     right:15px;
     top:-2px;
     transform-origin:center top;
-    transition:all 0.5s;
+    transition:all 0.09s;
     overflow: hidden;
+    cursor: pointer;
 }
 .crayons-footer__mascot:hover{
     transform:rotate(-6deg);
