--- a/css/style.css
+++ b/css/style.css
@@ -377,16 +377,16 @@ p {
 
 .services-front-flip {
     box-shadow: 0 10px 50px rgba(20, 50, 47, 0.03), 0 10px 40px rgba(0, 0, 0, 0.03);
-    min-height: 218px;
+    height: 218px;
     border-radius: 5px;
 }
 .services-back-flip {
     position: absolute;
-    top: 0;
+    top: 10px;
     left: 0;
     width: 100%;
     transform: rotateY(180deg);
-    min-height: 218px;
+    height: 218px;
     border-radius: 5px;
 }
 
