--- a/css/jquerysctipttop.css
+++ b/css/jquerysctipttop.css
@@ -10,7 +10,7 @@
     width: 100%;
     text-align: center;
     color: white;
-    font-family: "Open Sans";
+    font-family: "Open Sans", serif;
     font-size: 14px;
     font-style: normal;
     font-variant: normal;
