--- a/css/colors/default.css
+++ b/css/colors/default.css
@@ -1,77 +1,1 @@
-
-.text-custom,
-.btn-outline,
-.btn-custom:hover,
-.btn-custom:focus,
-.btn-custom:active,
-.btn-custom.active,
-.btn-custom.focus,
-.btn-custom:active,
-.btn-custom:focus,
-.btn-custom:hover,
-.open > .dropdown-toggle.btn-custom,
-.navbar-custom .navbar-nav li.active a,
-.navbar-custom .navbar-nav li a:hover,
-.navbar-custom .navbar-nav li a:active,
-.nav-sticky.navbar-custom .navbar-nav li.active a,
-.nav-sticky.navbar-custom .navbar-nav li a:hover,
-.nav-sticky.navbar-custom .navbar-nav li a:active 
-{
-  color: #ff9800;
-}
-
-.bg-custom,
-.btn-custom,
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active,
-.btn-outline.focus,
-.btn-outline:active,
-.btn-outline:focus,
-.btn-outline:hover,
-.open > .dropdown-toggle.btn-outline,
-.title:before,
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link:focus,
-.nav-tabs .nav-link.active,
-.progress-bar,
-.container-filter li a:hover,
-.container-filter li a.active,
-.footer .social-icons li a:hover
-{
-	background: #ff9800;
-}
-
-.btn-custom,
-.btn-custom:hover,
-.btn-custom:focus,
-.btn-custom:active,
-.btn-custom.active,
-.btn-custom.focus,
-.btn-custom:active,
-.btn-custom:focus,
-.btn-custom:hover,
-.open > .dropdown-toggle.btn-custom,
-.btn-outline,
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active,
-.btn-outline.focus,
-.btn-outline:active,
-.btn-outline:focus,
-.btn-outline:hover,
-.open > .dropdown-toggle.btn-outline,
-.container-filter li a.active,
-.container-filter li a:hover{
-	border: 1px solid #ff9800;
-}
-
-.testimonial{
-    border-top: 3px solid #ff9800;
-}
-
-.footer .social-icons li a:hover{
-	border-color: #ff9800;
-}
+.btn-custom.active,.btn-custom.focus,.btn-custom:active,.btn-custom:focus,.btn-custom:hover,.btn-outline,.nav-sticky.navbar-custom .navbar-nav li a:active,.nav-sticky.navbar-custom .navbar-nav li a:hover,.nav-sticky.navbar-custom .navbar-nav li.active a,.navbar-custom .navbar-nav li a:active,.navbar-custom .navbar-nav li a:hover,.navbar-custom .navbar-nav li.active a,.open>.dropdown-toggle.btn-custom,.text-custom{color:#ff9800}.bg-custom,.btn-custom,.btn-outline.active,.btn-outline.focus,.btn-outline:active,.btn-outline:focus,.btn-outline:hover,.container-filter li a.active,.container-filter li a:hover,.footer .social-icons li a:hover,.nav-tabs .nav-item.show .nav-link,.nav-tabs .nav-link.active,.nav-tabs .nav-link:focus,.open>.dropdown-toggle.btn-outline,.progress-bar,.title:before{background:#ff9800}.btn-custom,.btn-custom.active,.btn-custom.focus,.btn-custom:active,.btn-custom:focus,.btn-custom:hover,.btn-outline,.btn-outline.active,.btn-outline.focus,.btn-outline:active,.btn-outline:focus,.btn-outline:hover,.container-filter li a.active,.container-filter li a:hover,.open>.dropdown-toggle.btn-custom,.open>.dropdown-toggle.btn-outline{border:1px solid #ff9800}.testimonial{border-top:3px solid #ff9800}.footer .social-icons li a:hover{border-color:#ff9800}
